--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.android.tools.build:gradle:7.3.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +19,9 @@ allprojects {
         maven {
             url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
         }
+//        maven {
+//            url "https://jitpack.io"
+//        }
     }
 }
 
